[package]
name = "hal-9000"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.17.1"
reqwest = "0.11.14"
serde = "1.0.156"
serde_json = "1.0.94"
serenity = "0.11.5"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }